removed python setup instructions

--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -30,15 +30,6 @@
     </p>
   </div>
   <div class="span6">
-    <h4>Python</h4>
-    <p>
-      Python is becoming very popular in scientific computing,
-      and it's a great language for teaching general programming concepts due to its easy-to-read syntax.
-      We teach with Python version 2.7,
-      since it is still the most widely used.
-      Installing all the scientific packages for Python individually can be a bit difficult,
-      so we recommend an all-in-one installer.
-    </p>
     <h4>R</h4>
     <p>
       R is a programming language that specializes in statistical
@@ -91,18 +82,7 @@
     </p>
   </div>
   <div class="span6">
-    <h4>Python</h4>
-    <ul>
-      <li>
-        Download and install  <a href="http://continuum.io/anacondace.html">Anaconda CE</a>.
-      </li>
-      <li>
-        Use all of the defaults for installation
-        <em>except</em>
-        make sure to check <strong>Make Anaconda the default Python</strong>.
-      </li>
-    </ul>
-    <h4>R</h4>
+     <h4>R</h4>
     <p>
       Install R by downloading and running
       <a href="http://cran.r-project.org/bin/windows/base/release.htm">this .exe file</a>
@@ -147,18 +127,7 @@
     </p>
   </div>
   <div class="span6">
-    <h4>Python</h4>
-    <ul>
-      <li>
-        Download and install  <a href="http://continuum.io/anacondace.html">Anaconda CE</a>.
-      </li>
-      <li>
-        Use all of the defaults for installation
-        <em>except</em>
-        make sure to check <strong>Make Anaconda the default Python</strong>.
-      </li>
-    </ul>
-    <h4>R</h4>
+     <h4>R</h4>
     <p>
       Install R by downloading and running
       <a href="http://cran.r-project.org/bin/macosx/R-latest.pkg">this .pkg file</a>
@@ -214,43 +183,7 @@
       you may install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
     </p>
   </div>
-  <div class="span6">
-    <h4>Python</h4>
-    <p>
-      We recommend the all-in-one scientific Python installer
-      <a href="http://continuum.io/downloads.html">Anaconda</a>.
-      (Installation requires using the shell and if you aren't
-      comfortable doing the installation yourself just
-      download the installer and we'll help you at the boot
-      camp.)
-    </p>
-    <ol>
-      <li>
-        Download the installer that matches your operating
-        system and save it in your home folder.
-      </li>
-      <li>
-        Open a terminal window.
-      </li>
-      <li>
-        Type <pre>bash Anaconda-</pre> and then press
-        tab. The name of the file you just downloaded should
-        appear.
-      </li>
-      <li>
-        Press enter. You will follow the text-only
-        prompts. When there is a colon at the bottom of the
-        screen press the down arrow to move down through the
-        text. Type <code>yes</code> and press enter to approve
-        the license. Press enter to approve the default
-        location for the files. Type <code>yes</code> and
-        press enter to prepend Anaconda to
-        your <code>PATH</code> (this makes the Anaconda
-        distribution the default Python).
-      </li>
-    </ol>
-  </div>
-</div>
+ /div>
 
 <h3>Miscellaneous</h3>
 
