fixed a broken </div> tag

--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -183,7 +183,7 @@
       you may install the Firefox SQLite browser plugin described <a href="#firefox-sqlite">below</a>.
     </p>
   </div>
- /div>
+ </div>
 
 <h3>Miscellaneous</h3>
 
